Course home alignment quick fix

--- a/template/bootstrap/SASS/inventory.scss
+++ b/template/bootstrap/SASS/inventory.scss
@@ -1685,6 +1685,10 @@ td.option-btn-cell{
     padding: 0 0;
     margin: 0 0;
 }
+.side_content
+{
+    padding-top: 24px;
+}
 
 #calendar_wrapper{
     margin-bottom: 25px;
